--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ prettytable
 instagram-private-api
 gnureadline>=8.0.0; platform_system != "Windows"
 pyreadline==2.1; platform_system == "Windows"
+gnureadline
