--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ requests-toolbelt
 geopy
 prettytable
 instagram-private-api
-gnureadline>=8.0.0; platform_system != "Windows"
-pyreadline==2.1; platform_system == "Windows"
+gnureadline
+pyreadline
 gnureadline
